# pytest-unused-fixtures

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml
pytest_unused_fixtures/: __init__.py  decorators.py  options.py  plugin.py  xdist.py
tests/: test_base_class.py  test_ignore.py
