[tool.poetry]
name = "pytest-unused-fixtures"
version = "0.1.5"
description = "A pytest plugin to list unused fixtures after a test run."
authors = ["Mikuláš Poul <mikulaspoul@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pytest_unused_fixtures"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
]
include = ["LICENSE"]
repository = "https://github.com/mikicz/pytest-unused-fixtures"
keywords = ["pytest", "fixtures"]

[tool.poetry.plugins."pytest11"]
pytest-unused-fixtures = "pytest_unused_fixtures"

[tool.poetry.dependencies]
python = "^3.9"
pytest = ">7.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.283"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git         # exclude a few common directories in the
    | \.tox         # root of the project
    | venv
  )/
)
'''


[tool.ruff]
select = [
    # https://github.com/charliermarsh/ruff#pyflakes-f
    "F",
    # https://github.com/charliermarsh/ruff#pycodestyle-e-w
    "E",
    "W",
    # https://github.com/charliermarsh/ruff#isort-i
    "I",
    # https://github.com/charliermarsh/ruff#pep8-naming-n
    "N",
    # https://github.com/charliermarsh/ruff#pyupgrade-up
    "UP",
    # https://github.com/charliermarsh/ruff#flake8-bugbear-b
    "B",
    # https://github.com/charliermarsh/ruff#flake8-comprehensions-c4
    "C4",
    # https://github.com/charliermarsh/ruff#flake8-debugger-t10
    "T10",
    # https://github.com/charliermarsh/ruff#flake8-pie-pie
    "PIE",
    # https://github.com/charliermarsh/ruff#flake8-pytest-style-pt
    "PT",
    # https://github.com/charliermarsh/ruff#flake8-return-ret
    "RET",
    # https://github.com/charliermarsh/ruff#flake8-simplify-sim
    "SIM",
]

line-length = 120
target-version = "py310"

# Never enforce...
ignore = [
    "E501",   # line length violations
    "PT004",  # missing-fixture-name-underscore
    "SIM108", # use-ternary-operator
    "RET505", # superfluous-else-return
    "RET506", # superfluous-else-raise
    "RET507", # superfluous-else-continue
    "RET508", # superfluous-else-break
    "B027",   # empty-method-without-abstract-decorator
]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "list"
